--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Tetris</title>
 		<link rel="stylesheet" href="css/styles.css" />
+		<link rel="icon" href="img/favicon.svg" />
 		<script defer src="js/index.js" type="module"></script>
 	</head>
 	<body>
